vlib/v/checker/tests/undefined_var_in_comptime_for_test.vv
module main

struct Struct {
	b string
	a ?string
	c string
}

fn test[U](val U) {
	$for field in U.fields {
		fields_len++
		println(field)
	}
}

fn test_main() {
	test(Struct{})
}
